[gd_scene load_steps=9 format=4 uid="uid://bk8orhl2rrc2m"]

[ext_resource type="Script" uid="uid://t60tei0koljs" path="res://Scenes/Picture_Interaction_Vertical.gd" id="1_uu668"]
[ext_resource type="Material" uid="uid://bh2ysflr3wamv" path="res://Picture Frames/Material/Picture_Frame_Vertical_Material.tres" id="2_uu668"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uu668"]
albedo_color = Color(0.62877285, 0.4989069, 0.05700487, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_v8bua"]
_surfaces = [{
"aabb": AABB(-0.040000003, -0.0014673471, -3.7252903e-09, 0.040000007, 1.1111739, 1.5062487),
"format": 34359742465,
"index_count": 384,
"index_data": PackedByteArray("AAABAAIAAgABAAMAAAAEAAEAAAACAAUABgAEAAAAAQAEAAcABgAAAAgAAAAFAAgABQAHAAgAAQAHAAkACQADAAEABQAJAAcABAAKAAcACAAHAAoABAALAAoABgALAAQACwAMAAoACQAMAAMACwADAAwADQADAAsADQALAAYAAgADAA0AAgANAA4ADgANAAYADgAMAAkAAgAOAAUADgAJAAUADwAKAAwADwAMAA4ACAAKAA8ABgAIAA8ADgAGAA8AEAAIAAUAEAAFAA4ABQARAA4ACAASAAUABQASABEACAATABIADwATAAgAFAARABIAEgATABUAEgAVABQAEAAUABUAEwAWABUAFAAXABEADwAYABMAEwAYABYAGAARABcADgARABgAGAAXABYADgAYAA8AGQAXABQAGQAUABAAGgAWABcAGgAXABkAGgAOAA8AEAAOABkAGgAZAA4AGwAVABYAEAAVABsAGwAWABoAGwAPAAgAGwAaAA8AEAAbAAgAHAAZABoAHQAbABAAHQAQABkAGwAeABAAEAAfABkAEAAeAB8AGwAgAB4AGgAgABsAIQAaABsAHQAhABsAIQAcABoAGQAiABoAGgAiACAAGQAfACIAHgAgACMAJAAfAB4AHgAjACQAHQAkACMAJAAlAB8AIgAfACUAIAAiACYAIAAmACMAIgAlACYAIQAjACYAHQAjACEAHAAmACUAIQAmABwAJwAlACQAJwAkAB0AHAAlACcAHQAZACcAHAAnABkAIQAoAB0AHQAoACkAHQApACcAKgApACgAKwAdACcAJwApACwAJwAsABwALAApAC0AKgAtACkAKwAtACoAKwAuAB0ALgAhAB0AKwAqAC4ALwArACcALwAtACsALwAnABwALAAtADAALwAwAC0ALgAqADEAKAAxACoALgAxADIALgAyACEAMgAwAC8AMgAvABwAMgAxADAAMgAcACEAKAAzADEAMwAwADEAIQAzACgAHAAzACEAMwAsADAAHAAsADMA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 52,
"vertex_data": PackedByteArray("AAAApxDOzz1wZrI/CtcjvBDOzz3NzMw9AAAAABDOzz3NzMw9D9cjvN+DfT/MzMw9CtcjvBDOzz1wZrI/4CKNMKhHnj3er5w9AACAp2Ugfz9wZrI/CdcjvKhHnj10yLU/wCKNMKhHnj10yLU/CdcjvKhHnj3er5w9CdcjvInGgj90yLU/CtcjvGUgfz9wZrI/DdcjvDBZgj/er5w98jCWsd+DfT/MzMw9hNBlsTBZgj/er5w9wCKNMInGgj90yLU/4DYoMbCAMz1YOTQ9DNejvDBZgj/er5w9CdejvKhHnj3er5w9CtejvKhHnj10yLU/CNejvLCAMz1YOTQ9CdejvLCAMz3Hdro/CNejvGw4hz/Hdro/C9ejvC1Rhz9WOTQ9CtejvInGgj90yLU/EisEsS1Rhz9WOTQ9wDYoMWw4hz/Hdro/2DYoMbCAMz3Hdro/YERSMXsiiT/derw/kERSMaDz8DyPwvU8jcL1vLCAMz1YOTQ9kML1vC1Rhz9WOTQ9jsL1vLCAMz3Hdro/eERSMaDz8Dzderw/jcL1vGw4hz/Hdro/jsL1vKDz8Dzderw/jsL1vKDz8DyPwvU8j8L1vPx0iT+NwvU8jcL1vHsiiT/derw/vDq0sPx0iT+NwvU8CdcjvaDz8DyOwvU8C9cjvfx0iT+MwvU8CdcjvQBUwLoAAACAAACApd0Kjj8AAICxCtcjvXsiiT/derw/C9cjvd0Kjj8AAICx+DCWMQBUwLoAAACAADGWMZo8jT/CzMA/CNcjvZo8jT/CzMA/CdcjvQBUwLrCzMA//DCWMQBUwLrCzMA/CdcjvaDz8Dzderw/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_fcqkx"]
resource_name = "Picture Frame Vertical _Plane_002"
_surfaces = [{
"aabb": AABB(-0.040000003, -0.0014673471, -3.7252903e-09, 0.040000007, 1.1111739, 1.5062487),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD+UmZk+AACAP5yZmT4AAIA/nJmZPgAAgD+UmZk+AACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD+SmZk+AACAP5qZmT4AAAAAmpmZPgAAAACSmZk+AACAP5yZmT4AAIA/lJmZPgAAgD+UmZk+AACAP5yZmT4AAIA/qkfhPgAAgD+wR+E+AACAP7BH4T4AAIA/qkfhPgAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAP5yZmT4AAIA/AAAAAAAAgD8AAAAAAACAP5SZmT4AAIA/mpmZPgAAAAAAAAAAAACAPwAAAAAAAAAAkpmZPgAAgD+amZk+AAAAAJKZmT4AAIA/kpmZPgAAgD+amZk+AAAAAJyZmT4AAIA/mpmZPgAAAACamZk+AAAAAJyZmT4AAIA/kpmZPgAAgD+UmZk+AACAP5SZmT4AAIA/kpmZPgAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAP7BH4T4AAIA/qkfhPgAAgD+qR+E+AACAP7BH4T4AAIA/p0fhPgAAgD+tR+E+AAAAAK1H4T4AAAAAp0fhPgAAgD/V20M/AAAAANjbQz8AAIA/2NtDPwAAgD/V20M/AAAAAK1H4T4AAAAAp0fhPgAAgD+nR+E+AACAP61H4T4AAAAAp0fhPgAAgD+amZk+AAAAAJKZmT4AAIA/rUfhPgAAAACqR+E+AACAP5yZmT4AAIA/lJmZPgAAgD+wR+E+AACAP7BH4T4AAIA/rUfhPgAAAACtR+E+AAAAALBH4T4AAIA/p0fhPgAAgD+qR+E+AACAP6pH4T4AAIA/p0fhPgAAgD+amZk+AAAAAJyZmT4AAIA/nJmZPgAAgD+amZk+AAAAAJSZmT4AAIA/kpmZPgAAgD+SmZk+AACAP5SZmT4AAIA/2NtDPwAAgD/V20M/AAAAANXbQz8AAAAA2NtDPwAAgD/U20M/AACAP9fbQz8AAIA/19tDPwAAgD/U20M/AACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/19tDPwAAgD/U20M/AACAP9TbQz8AAIA/19tDPwAAgD/U20M/AACAP6pH4T4AAIA/sEfhPgAAgD/X20M/AACAP9XbQz8AAAAAp0fhPgAAgD+tR+E+AAAAANjbQz8AAIA/1NtDPwAAgD/V20M/AAAAANXbQz8AAAAA1NtDPwAAgD/Y20M/AACAP9fbQz8AAIA/19tDPwAAgD/Y20M/AACAP61H4T4AAAAAsEfhPgAAgD+wR+E+AACAP61H4T4AAAAAqkfhPgAAgD+nR+E+AACAP6dH4T4AAIA/qkfhPgAAgD/U20M/AACAPwAAgD8AAAAAAACAPwAAgD/V20M/AAAAANfbQz8AAIA/AACAPwAAgD8AAIA/AACAP9jbQz8AAIA/1dtDPwAAAADU20M/AACAP9TbQz8AAIA/1dtDPwAAAADX20M/AACAP9jbQz8AAIA/2NtDPwAAgD/X20M/AACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/1dtDPwAAAADY20M/AACAP7BH4T4AAIA/1NtDPwAAgD+tR+E+AAAAAJyZmT4AAIA/mpmZPgAAAAA="),
"format": 34359742487,
"index_count": 384,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAIgAkACAAIwAlACEAIgAmACQAIwAnACUAJwAmACUAJwAkACYAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUASABJAEoASABLAEkATABIAEoATQBJAEsATABKAE4ATQBLAE8ATwBMAE4ATwBOAE0AUABRAFIAUABTAFEAVABVAFYAVABXAFUAWABZAFoAWABbAFkAXABdAF4AXABfAF0AYABhAGIAYABjAGEAZABlAGYAZABnAGUAaABpAGoAaABrAGkAbABtAG4AbABvAG0AcABxAHIAcABzAHEAcgB0AHAAcwB1AHEAcgB2AHQAcwB3AHUAdwB2AHUAdwB0AHYAeAB5AHoAeAB7AHkAfAB9AH4AfAB/AH0AgACBAIIAgACDAIEAhACFAIYAhACHAIUAiACJAIoAiACLAIkAigCMAIgAjQCJAIsAigCOAIwAjQCLAI8AjgCPAIwAjgCNAI8AkACRAJIAkACTAJEAlACVAJYAlACXAJUAmACZAJoAmACbAJkAnACdAJ4AnACfAJ0AoAChAKIAoACjAKEApACgAKIAowClAKEAogChAKYAowCnAKUApwCkAKgApACiAKgApwCoAKUAogCmAKkAqACiAKkAqQCmAKoApQCoAKsAqACpAKsApQCrAKwAqQCqAK0AqwCpAK0AqwCtAK4ArACrAK4ArwCuAK0ArACuALAArwCxAK4AsQCwAK4AsQCyALAAsgCqALAAsgCzAKoAtACzAK8AtACvALUAtgC3ALQAtgC0ALgAuQC2ALgAuQC4ALoA"),
"material": SubResource("StandardMaterial3D_uu668"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 187,
"vertex_data": PackedByteArray("AAAApxDOzz1wZrI/CtcjvBDOzz3NzMw9AAAAABDOzz3NzMw9CtcjvBDOzz1wZrI/eERSMaDz8Dzderw/CdcjvaDz8DyOwvU8kERSMaDz8DyPwvU8CdcjvaDz8Dzderw//DCWMQBUwLrCzMA/CNcjvZo8jT/CzMA/ADGWMZo8jT/CzMA/CdcjvQBUwLrCzMA/ADGWMZo8jT/CzMA/C9cjvd0Kjj8AAICxAACApd0Kjj8AAICxCNcjvZo8jT/CzMA/YERSMXsiiT/derw/j8L1vPx0iT+NwvU8vDq0sPx0iT+NwvU8jcL1vHsiiT/derw/kERSMaDz8DyPwvU8jsL1vKDz8Dzderw/eERSMaDz8Dzderw/jsL1vKDz8DyPwvU82DYoMbCAMz3Hdro/jcL1vLCAMz1YOTQ94DYoMbCAMz1YOTQ9jsL1vLCAMz3Hdro/AACApd0Kjj8AAICxCdcjvQBUwLoAAACA+DCWMQBUwLoAAACAC9cjvd0Kjj8AAICxCdcjvaDz8DyOwvU8CdcjvQBUwLrCzMA/CdcjvQBUwLoAAACACdcjvaDz8Dzderw/C9cjvfx0iT+MwvU8CNcjvZo8jT/CzMA/C9cjvd0Kjj8AAICxCtcjvXsiiT/derw/vDq0sPx0iT+NwvU8CtcjvXsiiT/derw/YERSMXsiiT/derw/C9cjvfx0iT+MwvU8kERSMaDz8DyPwvU8C9cjvfx0iT+MwvU8vDq0sPx0iT+NwvU8CdcjvaDz8DyOwvU8YERSMXsiiT/derw/CdcjvaDz8Dzderw/eERSMaDz8Dzderw/CtcjvXsiiT/derw/+DCWMQBUwLoAAACACdcjvQBUwLrCzMA//DCWMQBUwLrCzMA/CdcjvQBUwLoAAACA4DYoMbCAMz1YOTQ9CdejvLCAMz3Hdro/2DYoMbCAMz3Hdro/CNejvLCAMz1YOTQ9wDYoMWw4hz/Hdro/C9ejvC1Rhz9WOTQ9EisEsS1Rhz9WOTQ9CNejvGw4hz/Hdro/hNBlsTBZgj/er5w9CtejvInGgj90yLU/wCKNMInGgj90yLU/DNejvDBZgj/er5w9EisEsS1Rhz9WOTQ9jcL1vGw4hz/Hdro/wDYoMWw4hz/Hdro/kML1vC1Rhz9WOTQ9jcL1vGw4hz/Hdro/j8L1vPx0iT+NwvU8jcL1vHsiiT/derw/kML1vC1Rhz9WOTQ9jsL1vLCAMz3Hdro/jsL1vKDz8DyPwvU8jsL1vKDz8Dzderw/jcL1vLCAMz1YOTQ94DYoMbCAMz1YOTQ9kML1vC1Rhz9WOTQ9EisEsS1Rhz9WOTQ9jcL1vLCAMz1YOTQ9wDYoMWw4hz/Hdro/jsL1vLCAMz3Hdro/2DYoMbCAMz3Hdro/jcL1vGw4hz/Hdro/vDq0sPx0iT+NwvU8jsL1vKDz8DyPwvU8kERSMaDz8DyPwvU8j8L1vPx0iT+NwvU8eERSMaDz8Dzderw/jcL1vHsiiT/derw/YERSMXsiiT/derw/jsL1vKDz8Dzderw/wCKNMInGgj90yLU/DdcjvDBZgj/er5w9hNBlsTBZgj/er5w9CdcjvInGgj90yLU/4CKNMKhHnj3er5w9CdcjvKhHnj10yLU/wCKNMKhHnj10yLU/CdcjvKhHnj3er5w9AAAAABDOzz3NzMw9D9cjvN+DfT/MzMw98jCWsd+DfT/MzMw9CtcjvBDOzz3NzMw9wCKNMKhHnj10yLU/CdejvKhHnj3er5w94CKNMKhHnj3er5w9CtejvKhHnj10yLU/CdejvKhHnj3er5w9CdejvLCAMz3Hdro/CNejvLCAMz1YOTQ9CtejvKhHnj10yLU/DNejvDBZgj/er5w9CNejvGw4hz/Hdro/C9ejvC1Rhz9WOTQ9CtejvInGgj90yLU/4CKNMKhHnj3er5w9DNejvDBZgj/er5w9hNBlsTBZgj/er5w9CdejvKhHnj3er5w9wCKNMInGgj90yLU/CtejvKhHnj10yLU/wCKNMKhHnj10yLU/CtejvInGgj90yLU/EisEsS1Rhz9WOTQ9CNejvLCAMz1YOTQ94DYoMbCAMz1YOTQ9C9ejvC1Rhz9WOTQ92DYoMbCAMz3Hdro/CNejvGw4hz/Hdro/wDYoMWw4hz/Hdro/CdejvLCAMz3Hdro/CdcjvKhHnj3er5w9D9cjvN+DfT/MzMw9CtcjvBDOzz3NzMw9DdcjvDBZgj/er5w9CdcjvKhHnj10yLU/CtcjvGUgfz9wZrI/CtcjvBDOzz1wZrI/CdcjvInGgj90yLU/hNBlsTBZgj/er5w9CdcjvKhHnj3er5w94CKNMKhHnj3er5w9DdcjvDBZgj/er5w9wCKNMKhHnj10yLU/CdcjvInGgj90yLU/wCKNMInGgj90yLU/CdcjvKhHnj10yLU/8jCWsd+DfT/MzMw9CtcjvGUgfz9wZrI/AACAp2Ugfz9wZrI/D9cjvN+DfT/MzMw9AACAp2Ugfz9wZrI/CtcjvBDOzz1wZrI/AAAApxDOzz1wZrI/CtcjvGUgfz9wZrI/ADGWMZo8jT/CzMA/vDq0sPx0iT+NwvU8YERSMXsiiT/derw/AACApd0Kjj8AAICx/DCWMQBUwLrCzMA/kERSMaDz8DyPwvU8EisEsS1Rhz9WOTQ9+DCWMQBUwLoAAACAeERSMaDz8Dzderw/wDYoMWw4hz/Hdro/hNBlsTBZgj/er5w92DYoMbCAMz3Hdro/4DYoMbCAMz1YOTQ9wCKNMInGgj90yLU/wCKNMKhHnj10yLU/AACAp2Ugfz9wZrI/4CKNMKhHnj3er5w9AAAApxDOzz1wZrI/AAAAABDOzz3NzMw98jCWsd+DfT/MzMw9hNBlsTBZgj/er5w9wCKNMInGgj90yLU/4DYoMbCAMz1YOTQ94CKNMKhHnj3er5w9EisEsS1Rhz9WOTQ9kERSMaDz8DyPwvU8vDq0sPx0iT+NwvU8/3///////7//f///////v/9///////+//3///////7//f///////v/9///////+//3///////7//f///////v/9//3////8//3//f////z//f/9/////P/9//3////8//391/////z//f3X/////P/9/df////8//391/////z//f8f/////P/9/x/////8//3/H/////z//f8f/////P/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3///////7//f///////v/9///////+//3///////7//////////v/////////+//////////7//////////vwAA/3//f3XgAAD/f////78AAP9//39C3wAA/3////+/AAD/f/9/iZ0AAP9/p8H+fwAA/3//fyqdAAD/f/7A/n83gAAA////vzeAAAD///+/N4AAAP///783gAAA////v/9//3////8//3//f////z//f/9/////P/9//3////8//////////7//////////v/////////+//////////7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3/u/////z//f+7/////P/9/7v////8//3/u/////z//f1EA////P/9/UQD///8//39RAP///z//f1EA////Pw+AAAD///+/D4AAAP///78PgAAA////vw+AAAD///+/AAD/f1bB/n8AAP9//38qnQAA/3+nwf5/AAD/f/9/WJ0AAP9/////vwAA/3//f+LfAAD/f////78AAP9//3914P9//3////8//3//f////z//f/9/////P/9//3////8//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/9//3////8//3//f////z//f/9/////P/9//3////8/UYD//////79RgP//////v1GA//////+/UYD//////7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9//3////8//3//f////z//f/9/////P/9//3////8//3///////7//f///////v/9///////+//3///////78AAP9//3914AAA/3////+/AAD/f/9/A98AAP9/////vwAA/3//f5ydAAD/f6fB/n8AAP9//38qnQAA/3/jwP5//3//f////z//f/9/////P/9//3////8//3//f////z//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//3//f////z//f/9/////P/9//3////8//3//f////z8AAP9//39b3wAA/3//f9RiAAD/f/9/deAAAP9//3+LYwAA/3////+/AAD/fxPB/n8AAP9/////vwAA/3+nwf5//////////7//////////v/////////+//////////7//f/9/////P/9//3////8//3//f////z//f/9/////P/9/nwD///8//3+fAP///z//f58A////P/9/nwD///8//////////7//////////v/////////+//////////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f/9/0yD///9//3/TIP///3//f+Af////f/9/iR////9//3+wYv///3//fxwg////f/9/1GI=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_v8bua")

[sub_resource type="ArrayMesh" id="ArrayMesh_ybshb"]
_surfaces = [{
"aabb": AABB(-1.6049201, -0.03798681, -1.1027008, 3.194447, 0.024691593, 2.2101746),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray("AAABAAIAAAADAAEA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("AAD/////AAD//wAAAAAAAP//AAD//wAAAAD+/8wBAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_40wmp"]
resource_name = "Picture Frame Horizontal _Plane"
_surfaces = [{
"aabb": AABB(-1.6049201, -0.03798681, -1.1027008, 3.194447, 0.024691593, 2.2101746),
"attribute_data": PackedByteArray("AAD/////AAD/////AAAAAA=="),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray("AAABAAIAAAADAAEA"),
"material": ExtResource("2_uu668"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("AAD//////7///wAAAAD/v///AAD///+/AAD+/8wB/78E/1F/BP9jfwT/gn8E/zN/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ybshb")

[sub_resource type="SphereShape3D" id="SphereShape3D_t3cpj"]
radius = 0.79254204

[node name="Picture Frame Vertical" type="Node3D" groups=["Player"]]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("1_uu668")

[node name="FrameMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0.5)
mesh = SubResource("ArrayMesh_fcqkx")
skeleton = NodePath("")

[node name="PictureMesh_Vertical" type="MeshInstance3D" parent="."]
transform = Transform3D(1.7703112e-08, -0.405, -6.11533e-08, -0.405, -1.7703112e-08, 0, -2.6730956e-15, 6.11533e-08, -0.405, 0, 0.748, -0.044)
mesh = SubResource("ArrayMesh_40wmp")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("2_uu668")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.08033109)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.21160722, 0)
shape = SubResource("SphereShape3D_t3cpj")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
